<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:maxLength="12"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/cardNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etExpiryDate"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/cExpDate"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber" />

    <EditText
        android:id="@+id/etCvc"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:maxLength="3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/cvc"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etExpiryDate"
        app:layout_constraintTop_toBottomOf="@+id/etCardNumber" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="114dp"
        android:ems="10"
        android:hint="@string/payAmount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/etTotalAmount"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="114dp"
        android:ems="10"
        android:hint="@string/totAmount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBtnCal" />

    <TextView
        android:id="@+id/etdDate"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="Delivery Date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTotalAmount" />

    <EditText
        android:id="@+id/etdDateInput"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/dDateInput"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etdDate"
        app:layout_constraintTop_toBottomOf="@+id/etTotalAmount" />

    <Button
        android:id="@+id/etBtnPay"
        android:layout_width="231dp"
        android:layout_height="65dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#268C2A"
        android:text="@string/btnPay"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdDateInput" />

    <Button
        android:id="@+id/etBtnCal"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#283A9E"
        android:text="@string/calButton"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/pm3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etExpiryDate" />

</androidx.constraintlayout.widget.ConstraintLayout>