<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bill">

    <TextView
        android:id="@+id/etBAmount"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/payAmount"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBPaymentID" />

    <TextView
        android:id="@+id/etBTotAmount"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/totAmount"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBAmount" />

    <EditText
        android:id="@+id/etBGetTotAmount"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/totAmount"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etBTotAmount"
        app:layout_constraintTop_toBottomOf="@+id/etBGetAmount" />

    <TextView
        android:id="@+id/etBDDate"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/BDDate"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBTotAmount" />

    <EditText
        android:id="@+id/etBGetDDate"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/dDateInput"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etBDDate"
        app:layout_constraintTop_toBottomOf="@+id/etBGetTotAmount" />

    <Button
        android:id="@+id/etBBtnOk"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="189dp"
        android:backgroundTint="#1D8121"
        android:text="@string/btnOk"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etBGetAmount"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/payAmount"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etBAmount"
        app:layout_constraintTop_toBottomOf="@+id/etBGetPaymentID" />

    <TextView
        android:id="@+id/etBPaymentID"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/paymentID"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBGetPaymentID"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/paymentID"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etBPaymentID"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>